<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/green_dark"
            app:cardElevation="2dp"
            >

            <ImageView
                android:id="@+id/imageViewAvatar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/image_border"
                android:src="@drawable/serious"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:contentDescription="avatar" />

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="12dp"
            >

            <TextView
                android:id="@+id/textViewNom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/name"
                android:textColor="@color/green_dark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewNumero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:text="@string/tel" />

            <TextView
                android:id="@+id/textViewMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mail" />

            <TextView
                android:id="@+id/textViewAdresse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewExp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/green_dark"
        android:text="@string/exp" />

    <ListView
        android:id="@+id/ListViewExperiences"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/item_experience"
        />

    <TextView
        android:id="@+id/textViewForm"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/green_dark"
        android:text="@string/form" />

    <ListView
        android:id="@+id/ListViewFormations"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/item_formation" />

    <Button
        android:id="@+id/buttonCompetences"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn"
        android:onClick="launchCompetencesActivity" />

</LinearLayout>